cleanup and deprecation